--- a/.abf.yml
+++ b/.abf.yml
@@ -1,4 +1,4 @@
 sources:
-  ldc-1.35.0-src.tar.gz: b65cd012c58908cf0ada4b16b189adf9658fb549
-  ldc2-1.35.0-linux-aarch64.tar.xz: 2f13a52befaf966d5301162e943f20768c1ee27f
-  ldc2-1.35.0-linux-x86_64.tar.xz: 2a32c531f62ab9760fb7e290218eb5aff54f0b45
+  ldc-1.36.0-beta1-src.tar.gz: d508847fc9e10c317529d9b8d5cf235eae3411c1
+  ldc2-1.36.0-beta1-linux-aarch64.tar.xz: 994cb59d27f21723d57f1ea6d07b8b81afcc504e
+  ldc2-1.36.0-beta1-linux-x86_64.tar.xz: 81de0c6dbd652bd629b0da3bad3df822e28ca309
